[package]
name = "eagerly"
version = "0.1.0"
authors = ["nkconnor <nicholas.k.connor@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

arc-swap = "0.4.7"
futures-ticker = "0.0.1"
futures = "0.3"
smol = "0.3"
